--- a/app/src/main/res/layout/home_screen_frag.xml
+++ b/app/src/main/res/layout/home_screen_frag.xml
@@ -16,7 +16,7 @@
 
 
         <ImageView
-            android:id="@+id/txt_about"
+            android:id="@+id/home_about_img"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/_10sdp"
